--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
     "name": "goit-react-hw-04-movies",
-    "homepage": "https://paulpugovkin.github.io/goit-react-hw-04-movies/",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
@@ -51,6 +50,11 @@
         "prop-types": "^15.7.2",
         "react-router-dom": "^5.2.1",
         "react-toastify": "^8.0.1",
-        "shortid": "^2.2.16"
+        "shortid": "^2.2.16",
+        "eslint": "^7.32.0"
+    },
+    "lint-staged": {
+        "*.{js,jsx}": "eslint --cache --fix",
+        "*.{js,jsx,css,md,scss}": "prettier --write"
     }
 }
